# rs-web

./: Cargo.toml  Makefile  README.md
config/: development.toml  production.toml
docs/: create_superuser.md
entity/: Cargo.toml
entity/src/: auth_users.rs  auth_users_ext.rs  lib.rs  mod.rs  prelude.rs
migration/src/: lib.rs  m20250807_065844_create_users_table.rs  m20250807_091101_add_auth_users_indexes.rs
security/: Cargo.toml
security/src/: password.rs
src/: error.rs  lib.rs  main.rs  state.rs
src/config/: mod.rs
src/db/: mod.rs
src/handlers/: health.rs
src/routes/: mod.rs  v1.rs
