[package]
name = "service"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
actix-web = "4"
schemars = { package = "apistos-schemars", version = "0.8" }
apistos = { version = "0.6", features = ["redoc", "rapidoc", "scalar"] }
actix-cors = "0.7"

# Database
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "1.1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
entity = { path = "entity" }
migration = { path = "migration" }
security = { path = "./security" }


[workspace]
members = [".", "entity", "migration", "security"]


[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "create_superuser"
path = "src/bin/create_superuser.rs"
